storage_wiredtiger_record_store_and_index_bm crashes in fixture setup

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-06-23, Storage Execution 2025-07-07
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Suspecting the reduction of cache size. The benchmark inserts a large amount of data and causes cacheIsInsufficientForTransaction, see stack trace below.

      [1750138095:448307][36720:0xfffff7ff2040], WT_SESSION.open_cursor: [WT_VERB_DEFAULT][ERROR]: int __wt_curstat_open(WT_SESSION_IMPL *, const char *, const char **, WT_CURSOR **), 674: cursor's statistics configuration doesn't match the database statistics configuration: Invalid argumentThread 1 "storage_wiredti" received signal SIGTRAP, Trace/breakpoint trap.
      0x0000fffff78df1f0 in ?? () from /lib/aarch64-linux-gnu/libc.so.6
      (gdb) bt
      #0  0x0000fffff78df1f0 in ?? () from /lib/aarch64-linux-gnu/libc.so.6
      #1  0x0000fffff789a67c in raise () from /lib/aarch64-linux-gnu/libc.so.6
      #2  0x0000aaaabadc1da4 in mongo::breakpoint () at src/mongo/util/debugger.cpp:71
      #3  0x0000aaaabad702f0 in mongo::tassertFailed (
          status=Status(6190900, "unable to gather the WT session's txn dirty bytes: CursorNotFound: unable to open cursor at URI statistics:session for statistic: 4003. reason: Invalid argument"), loc=...) at src/mongo/util/assert_util.cpp:288
      #4  0x0000aaaab479e54c in mongo::(anonymous namespace)::cacheIsInsufficientForTransaction(__wt_session*, double)::$_0::operator()() const (
          this=0xffffffffb5f8) at src/mongo/db/storage/wiredtiger/wiredtiger_error_util.cpp:54
      #5  0x0000aaaab479dc84 in mongo::(anonymous namespace)::cacheIsInsufficientForTransaction (session=0x7377ffaea360, threshold=0.75)
          at src/mongo/db/storage/wiredtiger/wiredtiger_error_util.cpp:54
      #6  0x0000aaaab479db28 in mongo::throwAppropriateException (txnTooLargeEnabled=true, temporarilyUnavailableEnabled=true, session=0x7377ffaea360,
          cacheThreshold=0.75, prefix="WiredTigerIndexStandard::_insert: index: textIndex; uri: table:test.wt", retCode=-31800)
          at src/mongo/db/storage/wiredtiger/wiredtiger_error_util.cpp:138
      #7  0x0000aaaab479dfcc in mongo::wtRCToStatus_slow (retCode=-31800, session=0x7377ffaea360,
          prefix="WiredTigerIndexStandard::_insert: index: textIndex; uri: table:test.wt") at src/mongo/db/storage/wiredtiger/wiredtiger_error_util.cpp:156
      #8  0x0000aaaab47d440c in mongo::wtRCToStatus<mongo::WiredTigerIndexStandard::_insert(mongo::OperationContext*, mongo::RecoveryUnit&, __wt_cursor*, mongo::WiredTigerSession*, mongo::key_string::View const&, bool, mongo::IncludeDuplicateRecordId)::$_0>(int, __wt_session*, mongo::WiredTigerIndexStandard::_insert(mongo::OperationContext*, mongo::RecoveryUnit&, __wt_cursor*, mongo::WiredTigerSession*, mongo::key_string::View const&, bool, mongo::IncludeDuplicateRecordId)::$_0&&) (retCode=-31800, session=0x7377ffaea360, contextExpr=...) at src/mongo/db/storage/wiredtiger/wiredtiger_error_util.h:80
      #9  0x0000aaaab47d432c in mongo::WiredTigerIndexStandard::_insert (this=0x7377ff8283f0, opCtx=0x7377ffa71180, ru=..., c=0x7377ff23ea00,
          session=0x7377ff8d1280, keyString=..., dupsAllowed=true, includeDuplicateRecordId=mongo::IncludeDuplicateRecordId::kOff)
          at src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp:1702
      #10 0x0000aaaab47ce8b4 in mongo::WiredTigerIndex::insert (this=0x7377ff8283f0, opCtx=0x7377ffa71180, ru=..., keyString=..., dupsAllowed=true,
          includeDuplicateRecordId=mongo::IncludeDuplicateRecordId::kOff) at src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp:280
      #11 0x0000aaaab4c6b6dc in mongo::(anonymous namespace)::Fixture::Fixture (this=0xffffffffd120, uniqueness=mongo::(anonymous namespace)::kNonUnique,
          direction=mongo::(anonymous namespace)::kForward, nToInsert=100000, keyFormat=mongo::KeyFormat::Long)
          at src/mongo/db/storage/sorted_data_interface_bm.cpp:84
      #12 0x0000aaaab4c6ad4c in mongo::(anonymous namespace)::BM_SDIAdvance (state=..., direction=mongo::(anonymous namespace)::kForward,
          keyInclusion=mongo::SortedDataInterface::Cursor::KeyInclusion::kExclude, uniqueness=mongo::(anonymous namespace)::kNonUnique,
          keyFormat=mongo::KeyFormat::Long) at src/mongo/db/storage/sorted_data_interface_bm.cpp:208

            Assignee:
            Sandeep Dhoot (Inactive)
            Reporter:
            Wei Hu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: