SERVER-106383: Configure a microbenchmark with sufficient WiredTiger cache size. (#38014)

Co-authored-by: Wei Hu <wei.hu@mongodb.com>
GitOrigin-RevId: 399aaaf4c48bc969f61348bcbb4c7e4b4622165f